RESOLVED FIXED130419
REGRESSION: Visited link coloring seems to be completely broken in tip of tree
https://bugs.webkit.org/show_bug.cgi?id=130419
Summary REGRESSION: Visited link coloring seems to be completely broken in tip of tree
Anders Carlsson
Reported 2014-03-18 13:34:09 PDT
REGRESSION: Visited link coloring seems to be completely broken in tip of tree
Attachments
Patch (1.88 KB, patch)
2014-03-18 13:37 PDT, Anders Carlsson
mitz: review+
Anders Carlsson
Comment 1 2014-03-18 13:37:10 PDT
Anders Carlsson
Comment 2 2014-03-18 13:45:51 PDT
Csaba Osztrogonác
Comment 3 2014-05-20 05:01:56 PDT
(In reply to comment #2) > Committed r165841: <http://trac.webkit.org/changeset/165841> Dan, Anders, could you possibly review the patch in Bug131675 which fixes the serious regression this patch caused?
Note You need to log in before you can comment on or make changes to this bug.