REGRESSION: Visited link coloring seems to be completely broken in tip of tree https://bugs.webkit.org/show_bug.cgi?id=130419 <rdar://problem/16337850>

Reviewed by Dan Bernstein.

Make sure to send any queued up messages before calling connectionWillOpen so we'll ensure
FIFO ordering if any messages are sent from within connectionWillOpen.

* Shared/ChildProcessProxy.cpp:
(WebKit::ChildProcessProxy::didFinishLaunching):

Canonical link: https://commits.webkit.org/148409@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165841 268f45cc-cd09-0410-ab3c-d52691b4dbfc